[project]
name = "zerobypass"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "klembord>=0.3.0",
    "pytest-playwright>=0.7.2",
    "python-xlib>=0.26",
    "rich>=14.3.2",
]
[project.scripts]
zerobypass = "src.__main__:main"

[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
